<resources>
    <string name="app_name">Notes</string>
    <string name="title_note">Titulo da nota</string>
    <string name="descri_note">Descrição</string>
    <string name="save">Salvar</string>
    <string name="note">Anotação</string>
    <string name="notes">Notas</string>
    <string name="delete">apagar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="logar">Logar</string>
    <string name="info_new_accont">Não possui uma conta?</string>
    <string name="register">Cadastrar</string>
    <string name="name">nome</string>
</resources>
